--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1034,19 +1034,19 @@
   "wallet.settings.walletPublicKey": "ウォレット公開鍵",
   "wallet.settings.walletPublicKeyShowInstruction": "ウォレット公開鍵を表示するには[表示]ボタンをクリックしてください",
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
-  "wallet.summary.no.transactions": "最近のトランザクションはありません",
-  "wallet.summary.page.currency.isFetchingRate": "フェッチ時の換金レート",
-  "wallet.summary.page.currency.lastFetched": "換金済み：{fetchedTimeAgo}",
-  "wallet.summary.page.currency.title": "換金通貨：",
-  "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
-  "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
-  "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
-  "wallet.summary.page.todayLabel": "今日",
-  "wallet.summary.page.tokenSendButton": "送金",
-  "wallet.summary.page.tokensTitle": "トークン",
-  "wallet.summary.page.transactionsLabel": "トランザクション数",
-  "wallet.summary.page.unknownLabel": "不明",
-  "wallet.summary.page.yesterdayLabel": "昨日",
+  "wallet.summary.assets.tokenSendButton": "送金",
+  "wallet.summary.assets.tokensTitle": "トークン",
+  "wallet.summary.assets.unknownLabel": "不明",
+  "wallet.summary.currency.isFetchingRate": "フェッチ時の換金レート",
+  "wallet.summary.currency.lastFetched": "換金済み：{fetchedTimeAgo}",
+  "wallet.summary.currency.title": "換金通貨：",
+  "wallet.summary.header.pendingTransactionsLabel": "処理中のトランザクション数",
+  "wallet.summary.header.transactionsLabel": "トランザクション数",
+  "wallet.summary.page.no.transactions": "最近のトランザクションはありません",
+  "wallet.summary.transactionsList.showMoreTransactionsButtonLabel": "もっと表示",
+  "wallet.summary.transactionsList.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
+  "wallet.summary.transactionsList.todayLabel": "今日",
+  "wallet.summary.transactionsList.yesterdayLabel": "昨日",
   "wallet.transaction.address.from": "送信元",
   "wallet.transaction.address.to": "送信先",
   "wallet.transaction.addresses.from": "送信元アドレス",
