--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1034,19 +1034,19 @@
   "wallet.settings.walletPublicKey": "Wallet public key",
   "wallet.settings.walletPublicKeyShowInstruction": "To show wallet public key click \"Reveal\" button",
   "wallet.statusMessages.activeRestore": "The balance and transaction history of this wallet is {percentage}% synced with the blockchain.",
-  "wallet.summary.no.transactions": "No recent transactions",
-  "wallet.summary.page.currency.isFetchingRate": "fetching conversion rates",
-  "wallet.summary.page.currency.lastFetched": "converted {fetchedTimeAgo}",
-  "wallet.summary.page.currency.title": "Converts as",
-  "wallet.summary.page.pendingTransactionsLabel": "Number of pending transactions",
-  "wallet.summary.page.showMoreTransactionsButtonLabel": "Show more transactions",
-  "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
-  "wallet.summary.page.todayLabel": "Today",
-  "wallet.summary.page.tokenSendButton": "Send",
-  "wallet.summary.page.tokensTitle": "Tokens",
-  "wallet.summary.page.transactionsLabel": "Number of transactions",
-  "wallet.summary.page.unknownLabel": "Unknown",
-  "wallet.summary.page.yesterdayLabel": "Yesterday",
+  "wallet.summary.assets.tokenSendButton": "Send",
+  "wallet.summary.assets.tokensTitle": "Tokens",
+  "wallet.summary.assets.unknownLabel": "Unknown",
+  "wallet.summary.currency.isFetchingRate": "fetching conversion rates",
+  "wallet.summary.currency.lastFetched": "converted {fetchedTimeAgo}",
+  "wallet.summary.currency.title": "Converts as",
+  "wallet.summary.header.pendingTransactionsLabel": "Number of pending transactions",
+  "wallet.summary.header.transactionsLabel": "Number of transactions",
+  "wallet.summary.page.no.transactions": "No recent transactions",
+  "wallet.summary.transactionsList.showMoreTransactionsButtonLabel": "Show more transactions",
+  "wallet.summary.transactionsList.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
+  "wallet.summary.transactionsList.todayLabel": "Today",
+  "wallet.summary.transactionsList.yesterdayLabel": "Yesterday",
   "wallet.transaction.address.from": "From address",
   "wallet.transaction.address.to": "To address",
   "wallet.transaction.addresses.from": "From addresses",
