DDW-500 Implement design for native tokens - fixing label for token

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -14371,8 +14371,8 @@
         }
       },
       {
-        "defaultMessage": "!!!+ Add another token",
-        "description": "Label for the \"+ Add another token\" button in the wallet send form.",
+        "defaultMessage": "!!!+ Add a token",
+        "description": "Label for the \"+ Add a token\" button in the wallet send form.",
         "end": {
           "column": 3,
           "line": 88
