--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -931,7 +931,7 @@
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.form.amount.label": "Amount",
   "wallet.send.form.asset.label": "Token",
-  "wallet.send.form.button.addAssetButtonLabel": "+ Add another token",
+  "wallet.send.form.button.addAssetButtonLabel": "+ Add a token",
   "wallet.send.form.button.addNewReceiver": "+ Add another receiver",
   "wallet.send.form.button.removeReceiver": "Remove",
   "wallet.send.form.calculatingFeesLabel": "Calculating fees",
