--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -931,7 +931,7 @@
   "wallet.send.confirmationDialog.totalLabel": "合計",
   "wallet.send.form.amount.label": "金額",
   "wallet.send.form.asset.label": "トークン",
-  "wallet.send.form.button.addAssetButtonLabel": "+ 別のトークンを追加する",
+  "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
   "wallet.send.form.button.addNewReceiver": "+ 別のレシーバーを追加する",
   "wallet.send.form.button.removeReceiver": "削除",
   "wallet.send.form.calculatingFeesLabel": "手数料を計算しています",
