--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -26,7 +26,9 @@
   "appUpdate.overlay.downloadTimeLeft": "{downloadTimeLeft} left",
   "appUpdate.overlay.installingUpdate.link.label": "Installing update...",
   "appUpdate.overlay.manualUpdate.button.label": "Follow instructions and manually update",
-  "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/en/download/",
+  "appUpdate.overlay.manualUpdate.button.url.flight": "https://daedaluswallet.io/en/flight/",
+  "appUpdate.overlay.manualUpdate.button.url.mainnet": "https://daedaluswallet.io/en/download/",
+  "appUpdate.overlay.manualUpdate.button.url.testnet": "https://developers.cardano.org/en/testnets/cardano/get-started/wallet/",
   "appUpdate.overlay.manualUpdate.description.action": "Please manually update Daedalus to its latest version.",
   "appUpdate.overlay.manualUpdate.description.error": "We were unable to launch the update installer automatically.",
   "appUpdate.overlay.manualUpdate.description.errorLinux": "We were unable to launch the update installer automatically.",
