--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -26,7 +26,9 @@
   "appUpdate.overlay.downloadTimeLeft": "残り{downloadTimeLeft}",
   "appUpdate.overlay.installingUpdate.link.label": "更新をインストールしています...",
   "appUpdate.overlay.manualUpdate.button.label": "指示に従い手動で更新してください",
-  "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/ja/download/",
+  "appUpdate.overlay.manualUpdate.button.url.flight": "https://daedaluswallet.io/ja/flight/",
+  "appUpdate.overlay.manualUpdate.button.url.mainnet": "https://daedaluswallet.io/ja/download/",
+  "appUpdate.overlay.manualUpdate.button.url.testnet": "https://developers.cardano.org/en/testnets/cardano/get-started/wallet/",
   "appUpdate.overlay.manualUpdate.description.action": "手動でDaedalusを最新バージョンに更新してください。",
   "appUpdate.overlay.manualUpdate.description.error": "自動で更新インストーラーを起動できませんでした。",
   "appUpdate.overlay.manualUpdate.description.errorLinux": "更新をインストールできませんでした。",
