DDW-500 Implement design for native tokens - Ada (JP: ADA) is always separated from tokens

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -931,6 +931,7 @@
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.form.amount.label": "Amount",
   "wallet.send.form.asset.label": "Token",
+  "wallet.send.form.asset.adaLabel": "Ada",
   "wallet.send.form.button.addAssetButtonLabel": "+ Add a token",
   "wallet.send.form.button.addNewReceiver": "+ Add another receiver",
   "wallet.send.form.button.removeReceiver": "Remove",
