[DDW-149] Undelegating a wallet (#2351)
* [DDW-149] Implement undelegate wallet dialog on wallet settings screen

* [DDW-149] Update changelog

* [DDW-149] Update fees and deposit of undelegate wallet confirmation dialog

* [DDW-149] Show fees as absolute value on delegation/undelegation dialogs

* [DDW-149] Hide undelegate wallet panel for byron wallet

* [DDW-149] Add disability to undelegate wallet button

* [DDW-149] Disable undelegate button when wallet is not delegated yet or being restored

* [DDW-149] Fix flow test

* [DDW-149] Update undelegate wallet panel on wallet settings screen

* [DDW-149] Update undelegate wallet title translations

* [DDW-149] Update undelegate wallet translations

* [DDW-149] Enable hardware wallet undelegation

* [DDW-149] Fix delegation fee calculation handler

* [DDW-149] Remove unnecessary undelege wallet handlers

* [DDW-149] Add delegate and undelegate config

* [DDW-149] Update undeleate wallet variable naming

* [DDW-149] Remove unnecessary fee absolute value transformation

* [DDW-149] Update config variable names

* [DDW-149] Remove unnecessary variable of stake pool quit request payload

* [DDW-149] Adjust undelegate wallet box margin

* [DDW-149] Update undelegate wallet success dialog naming

* [DDW-149] Update undelegate wallet panel button click handler names

* [DDW-149] Update undelegate wallet panel styles

* [DDW-149] Update undelegate wallet panel styles

* [DDW-149] Add undelegate wallet config comment

* [DDW-149] Update props definition of undelegate wallet dialog container

* [DDW-149] Fix storybook error

* [DDW-149] Add hardware wallet story for undelegating

* [DDW-149] Change Wallet Settings Delegation to reflect Future Epoch

* [DDW-149] Fix issue with null status

* [DDW-149] Add Storybook groupId

* Updates CHANGELOG, Disables 'Voting Center' for Flight builds

* Re-enable Voting registration on Flight

* [DDW-149] Merges develop

* [

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -339,21 +339,6 @@
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "From epoch {fromEpoch}",
   "staking.delegationCenter.syncingTooltipLabel": "Syncing {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "Total slots",
-  "staking.delegationCenter.undelegate.dialog.calculatingFees": "Calculating fees",
-  "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "Undelegate",
-  "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "I understand that I will not be eligible to earn rewards when my stake is undelegated.",
-  "staking.delegationCenter.undelegate.dialog.confirmUnsupportCheck": "I understand that I am not supporting the Cardano network when my stake is undelegated.",
-  "staking.delegationCenter.undelegate.dialog.descriptionWithTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>[{stakePoolTicker}] {stakePoolName}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
-  "staking.delegationCenter.undelegate.dialog.descriptionWithUnknownTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>{stakePoolTicker}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
-  "staking.delegationCenter.undelegate.dialog.feesLabel": "Fees",
-  "staking.delegationCenter.undelegate.dialog.passwordError": "Incorrect spending password.",
-  "staking.delegationCenter.undelegate.dialog.spendingPasswordLabel": "Spending password",
-  "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "Enter spending password",
-  "staking.delegationCenter.undelegate.dialog.title": "Undelegate",
-  "staking.delegationCenter.undelegate.dialog.unknownStakePoolLabel": "unknown",
-  "staking.delegationCenter.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
-  "staking.delegationCenter.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
-  "staking.delegationCenter.undelegate.result.dialog.title": "Wallet undelegated",
   "staking.delegationCenter.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.walletAmount": "{amount} ADA",
   "staking.delegationCountdown.buttonLabel": "Learn more",
@@ -949,6 +934,10 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "Change password",
   "wallet.settings.changePassword.dialog.title.setPassword": "Set a password for {walletName} wallet",
   "wallet.settings.copyPublicKey": "Copy public key",
+  "wallet.settings.delegateWallet.disabledWarning": "This wallet is currently synchronizing with the blockchain, so its delegation status is currently unknown, and delegation is not possible.",
+  "wallet.settings.delegateWallet.header": "Delegate your wallet",
+  "wallet.settings.delegateWallet.warning": "This wallet is not delegated. Please delegate the stake from this wallet to earn rewards and support the security of the Cardano network.",
+  "wallet.settings.delegateWalletButtonLabel": "Delegate",
   "wallet.settings.delete.dialog.confirmBackupNotice": "I understand that the only way to regain access to this wallet is by restoring it with a wallet recovery phrase.",
   "wallet.settings.delete.dialog.confirmButtonLabel": "Delete",
   "wallet.settings.delete.dialog.enterRecoveryWordLabel": "Enter the name of the wallet to confirm deletion:",
@@ -1005,6 +994,26 @@
   "wallet.settings.setWalletPassword.dialog.setPasswordMessage": "To keep your wallet secure and start using it in Daedalus, you need to set a spending password.",
   "wallet.settings.setWalletPassword.dialog.setPasswordTitle": "Your wallet is not protected with a spending password",
   "wallet.settings.showQRCode": "Show QR code",
+  "wallet.settings.undelegate.dialog.calculatingFees": "Calculating fees",
+  "wallet.settings.undelegate.dialog.confirmButtonLabel": "Undelegate",
+  "wallet.settings.undelegate.dialog.confirmIneligibleNotice": "I understand that I am not eligible to earn rewards when my stake is undelegated.",
+  "wallet.settings.undelegate.dialog.confirmUnsupportNotice": "I understand that I am not supporting the Cardano network when my stake is undelegated.",
+  "wallet.settings.undelegate.dialog.depositLabel": "Deposits reclaimed",
+  "wallet.settings.undelegate.dialog.descriptionWithTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>[{stakePoolTicker}] {stakePoolName}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
+  "wallet.settings.undelegate.dialog.descriptionWithUnknownTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>{stakePoolTicker}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
+  "wallet.settings.undelegate.dialog.feesLabel": "Fees",
+  "wallet.settings.undelegate.dialog.passwordError": "Incorrect spending password.",
+  "wallet.settings.undelegate.dialog.spendingPasswordLabel": "Spending password",
+  "wallet.settings.undelegate.dialog.spendingPasswordPlaceholder": "Type your spending password here",
+  "wallet.settings.undelegate.dialog.title": "Undelegate",
+  "wallet.settings.undelegate.dialog.unknownStakePoolLabel": "unknown",
+  "wallet.settings.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
+  "wallet.settings.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+  "wallet.settings.undelegate.result.dialog.title": "Wallet undelegated",
+  "wallet.settings.undelegateWallet.disabledWarning": "This wallet is currently synchronizing with the blockchain, so its delegation status is currently unknown, and undelegation is not possible.",
+  "wallet.settings.undelegateWallet.header": "Undelegating your wallet",
+  "wallet.settings.undelegateWallet.warning": "If you are planning to stop using this wallet and withdraw all funds, you should first undelegate the wallet to recover your deposit of 2 ada. You will continue to receive delegation rewards during the three Cardano epochs after your wallet is undelegated.",
+  "wallet.settings.undelegateWalletButtonLabel": "Undelegate",
   "wallet.settings.utxos.description": "This wallet contains <b>{formattedWalletAmount} ADA</b> on <b>{walletUtxosAmount} UTXOs</b> (unspent transaction outputs). Examine the histogram below to see the distribution of UTXOs with different amounts of ada.",
   "wallet.settings.utxos.emptyWallet": "This wallet is empty so it does not contain any UTXOs (unspent transaction outputs).",
   "wallet.settings.utxos.findOutMoreLink": "Find out more",
