DDW-500 Implement design for native tokens - No tokens component

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1054,6 +1054,10 @@
   "wallet.summary.currency.title": "Converts as",
   "wallet.summary.header.pendingTransactionsLabel": "Number of pending transactions",
   "wallet.summary.header.transactionsLabel": "Number of transactions",
+  "wallet.summary.noTokens.learnMore.linkLabel": "Learn more",
+  "wallet.summary.noTokens.learnMore.linkUrl": "https://iohk.io/en/blog/posts/2021/02/04/native-tokens-to-bring-new-utility-to-life-on-cardano/",
+  "wallet.summary.noTokens.learnMore.textTop": "Want to find out more about native tokens?",
+  "wallet.summary.noTokens.learnMore.textBottom": "Start by visiting the IOHK blog for a useful primer.",
   "wallet.summary.page.no.transactions": "No recent transactions",
   "wallet.summary.transactionsList.showMoreTransactionsButtonLabel": "Show more transactions",
   "wallet.summary.transactionsList.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
