--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1054,6 +1054,10 @@
   "wallet.summary.currency.title": "換金通貨：",
   "wallet.summary.header.pendingTransactionsLabel": "処理中のトランザクション数",
   "wallet.summary.header.transactionsLabel": "トランザクション数",
+  "wallet.summary.noTokens.learnMore.linkLabel": "もっと知る",
+  "wallet.summary.noTokens.learnMore.linkUrl": "https://iohk.io/en/blog/posts/2021/02/04/native-tokens-to-bring-new-utility-to-life-on-cardano/",
+  "wallet.summary.noTokens.learnMore.textTop": "ネイティブトークンについてもっと知りたいですか？",
+  "wallet.summary.noTokens.learnMore.textBottom": "役立つ入門書については、IOHKブログにアクセスすることから始めてください。",
   "wallet.summary.page.no.transactions": "最近のトランザクションはありません",
   "wallet.summary.transactionsList.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.transactionsList.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
