--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1067,7 +1067,7 @@
   "wallet.transaction.address.to": "送信先",
   "wallet.transaction.addresses.from": "送信元アドレス",
   "wallet.transaction.addresses.to": "送信先",
-  "wallet.transaction.assetLabel": "資産",
+  "wallet.transaction.assetLabel": "トークン",
   "wallet.transaction.conversion.rate": "両替率",
   "wallet.transaction.deposit": "デポジット",
   "wallet.transaction.failed.cancelFailedTxnNote": "トランザクションはCardanoネットワークに送信されましたが、期限切れのため失敗しました。Cardanoネットワークのトランザクションには「time to live（有効期限）」属性があり、ネットワークがトランザクションを処理する前にこれを経過しました。このトランザクションに使用されたファンド（UTXO）をリリースして別のトランザクションで使用可能にするために、このトランザクションを削除してください。",
